# gallery

./: .gitignore  .pylintrc  .travis.yml  Dockerfile  LICENSE  README.md  config.env.py  config.sample.py  localconfig-sample.env.py  localconfig.env.py  mypy-run.sh  mypy.ini  requirements.txt  setup.cfg  wsgi.py
.openshift/: liveness_check.sh
gallery/: __init__.py  _version.py  file_store.py  ldap.py  models.py  s3.py  util.py
gallery/file_modules/: __init__.py  avi.py  bmp.py  cr2.py  gif.py  heic.py  jpg.py  mp3.py  mp4.py  ogg.py  pdf.py  png.py  tiff.py  txt.py  wav.py  webm.py
gallery/static/css/: csh-bootstrap.css  styles.css
gallery/static/js/: gallery.js
gallery/templates/: base.html  errors.html  jumpdir.html  mkdir.html  nav.html  upload.html  view_dir.html  view_file.html  view_filtered.html
migrations/versions/: 18c4f0e138f4_.py  2b09fa23c751_.py  78c91cdfd772_.py  915d41989da1_.py  c5793935c735_.py  e2e671ede5a4_add_pinned_to_directories_and_files.py  e99a064326b9_.py
