[metadata]
name = csh_gallery
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
summary = Python Photo Gallery Written in Flask
url = "https://github.com/liam-middlebrook/gallery"
description-file = README.md
license = MIT
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
