[metadata]
name = csh_gallery
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
summary = Python Photo Gallery Written in Flask
url = "https://github.com/liam-middlebrook/gallery"
description-file = README.md
license = MIT
version = 2.0.3
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
