[metadata]
name = csh_gallery
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
summary = Python Photo Gallery Written in Flask
url = "https://github.com/ComputerScienceHouse/gallery"
description-file = README.md
license = MIT
version = 2.3.0
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
